--- a/src/app/components/file-input/styles.module.css
+++ b/src/app/components/file-input/styles.module.css
@@ -1,17 +1,20 @@
-.input{
+.fileInput{
     width: 300px;
     height: 50px;
-    background-color: #fff;
-    color: var(--primary);
+    background-color: var(--primary);
+    color: #fff;
     font-size: 14pt;
     border-radius: 20px;
     border: 5px;
-    border-color: var(--primary);
     border-style: solid;
     text-align: center;
     transition: 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
-.input:focus{
+.fileInput:hover{
     box-shadow: 10px 10px var(--transparent);
 }
