--- a/src/app/components/container/styles.module.css
+++ b/src/app/components/container/styles.module.css
@@ -9,22 +9,5 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding-top: 150px;
-    padding-bottom: 150px;
-}
-
-.field{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 20px;
-}
-
-label{
-    font-size: 15pt;
-}
-
-
-a{
-    color: var(--primary);
+    flex-wrap: wrap;
 }
