atualiar pessoa e noticia

--- a/src/global.css
+++ b/src/global.css
@@ -26,6 +26,6 @@ ul{
 :root{
     --primary: #1a2b6e;
     --secondary:#3775b8;
-    --bg: #c5d7eb;
+    --bg: #e4eaf2;
     --transparent: #11111131;
 }
